Initialize Docs repository: https://github.com/OPS-E2E-PPE/xamarin-docs.zh-cn of branch live

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,31 +1,22 @@
 {
   "docsets_to_publish": [
     {
-      "docset_name": "xamarin-docs",
+      "docset_name": "e2eppe-xamarin-docs",
       "build_source_folder": "docs",
-      "build_output_subfolder": "xamarin-docs",
-      "locale": "zh-CN",
+      "build_output_subfolder": "e2eppe-xamarin-docs",
+      "locale": "zh-cn",
       "monikers": [],
       "moniker_ranges": [],
-      "xref_query_tags": [
-        "/dotnet"
-      ],
-      "open_to_public_contributors": true,
+      "open_to_public_contributors": false,
       "type_mapping": {
-        "Conceptual": "Content",
-        "ManagedReference": "Content",
-        "RestApi": "Content",
-        "ContextObject": "Toc",
-        "ZonePivotGroups": "Toc"
+        "Conceptual": "Content"
       },
       "build_entry_point": "docs",
       "template_folder": "_themes"
     }
   ],
   "notification_subscribers": [],
-  "sync_notification_subscribers": [
-    "ceicnotifications@microsoft.com"
-  ],
+  "sync_notification_subscribers": [],
   "branches_to_filter": [
     "master",
     "live"
@@ -34,7 +25,7 @@
   "git_repository_branch_open_to_public_contributors": "live",
   "continue_with_document_error": true,
   "skip_source_output_uploading": false,
-  "need_preview_pull_request": false,
+  "need_preview_pull_request": true,
   "contribution_branch_mappings": {
     "master-sxs": "master",
     "live-sxs": "live"
@@ -42,19 +33,13 @@
   "dependent_repositories": [
     {
       "path_to_root": "_themes",
-      "url": "https://github.com/Microsoft/templates.docs.msft.zh-CN",
-      "branch": "master",
-      "branch_mapping": {}
-    },
-    {
-      "path_to_root": "_themes.pdf",
-      "url": "https://github.com/Microsoft/templates.docs.msft.pdf",
+      "url": "https://github.com/Microsoft/templates.docs.msft.zh-cn",
       "branch": "master",
       "branch_mapping": {}
     },
     {
       "path_to_root": "_repo.en-us",
-      "url": "https://github.com/MicrosoftDocs/xamarin-docs-pr",
+      "url": "https://github.com/OPS-E2E-PPE/xamarin-docs",
       "branch": "live",
       "branch_mapping": {
         "live": "live",
@@ -62,16 +47,11 @@
       }
     }
   ],
-  "branch_target_mapping": {
-    "live-sxs": [
-      "Publish",
-      "Pdf"
-    ],
-    "live": [
-      "Publish",
-      "Pdf"
-    ]
-  },
+  "branch_target_mapping": {},
   "need_generate_pdf_url_template": true,
-  "targets": {}
+  "targets": {
+    "pdf": {
+      "template_folder": "_themes.pdf"
+    }
+  }
 }
