--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -28,7 +28,8 @@
   ],
   "branches_to_filter": [
     "master",
-    "live"
+    "live",
+    "docs-build-v3"
   ],
   "git_repository_url_open_to_public_contributors": "https://github.com/MicrosoftDocs/xamarin-docs.zh-CN",
   "git_repository_branch_open_to_public_contributors": "live",
@@ -37,7 +38,8 @@
   "need_preview_pull_request": false,
   "contribution_branch_mappings": {
     "master-sxs": "master",
-    "live-sxs": "live"
+    "live-sxs": "live",
+    "docs-build-v3-sxs":"docs-build-v3"
   },
   "dependent_repositories": [
     {
